--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class='container'>
+      <h1>hello less service</h1>
       <h1>It works!</h1>
       <div>
         <span>You're ready to start!</span>
